[project]
name = "tensor-networks"
version = "0.1.0"
description = "A repository for tracking my study of tensor networks"
readme = "README.md"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "matplotlib",
    "opt-einsum",
    "jupyter",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
